[package]
authors = ["Nivaldo Melo <nivaldogmelo@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "digi-memory-db"
version = "0.1.0"

[features]
default = ["alloc"]
std = []
alloc = []

[dependencies]
cortex-m-rt = { version = "0.7.3", features = ["device"] }
cortex-m-semihosting = "0.5.0"
heapless = "0.8.0"
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.10.0", features = ["stm32f103", "rt"] }
embedded-hal = "1.0.0"
cortex-m = "0.7.7"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.9.8"
# stm32f1xx-hal = "0.10.0"


# [dev-dependencies]
# heapless = { version = "0.8.0", features = ["std"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "digi-memory-db"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
